--- a/NOBOPROJETO/Homestyle.css
+++ b/NOBOPROJETO/Homestyle.css
@@ -125,20 +125,23 @@ main{
 }
 .acesso{
     background-color: var(--cor4);
-    width: 850px;
+    max-width: 1000px;
     border-radius: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     margin: auto;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.452);
 }   
 .login{
+    width: auto;
     margin: 10px;
     padding: 80px;
     font-family: var(--font2);
     text-align: center;
     border-radius: 20px;
-
 }
 .login:hover{
     box-shadow: 1px 0px 10px 1px rgba(255, 255, 255, 0.26) ;
@@ -148,8 +151,48 @@ main{
     font-size: 3em;
 }
 form p{
-    margin-bottom:10px;
+    display: block;
+    margin: auto;
+    margin-bottom: 15px;
     font-size: 1.5em;
+}
+form input{
+    width: 100%;
+    height: 20px;
+    background-color: var(--cor2);
+    color: var(--cor3);
+    border-radius: 5px;
+    font-size: 1rem;
+}
+form label.botao{
+    border: none;
+    font-family: var(--font2);
+    font-size: 1em;
+    height: auto;
+    width: 200px;
+}
+input#csubmit, input#lsubmit{
+    display: none;
+}
+form label.botao{
+    position: relative;
+    font-size: 1.5em;
+}
+form label.botao::before{
+    position: absolute;
+    background-color: var(--cor3);
+    height: 3px;
+    width: 100%;
+    content: '';
+    transform: scale(0);
+    transform-origin: right;
+    transition: transform .2s linear;
+    bottom: 0;
+    left: 0;
+}
+form label.botao:hover::before{
+    transform: scale(1);
+    transform-origin: left;
 }
 .tconteudo{
     font-size: 25px;
@@ -160,10 +203,32 @@ form p{
     position: absolute;
 
 }
+.hidden{
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+.show{
+    opacity: 1;
+    filter: blur(0px);
+    transform: translate(0);
+}
+.perfil:nth-child(2){
+    transition-delay: 200ms;
+}
+.perfil:nth-child(3){
+    transition-delay: 600ms; 
+}
+.perfil:nth-child(4){
+    transition-delay: 600ms;
+}
+.back{
+    background-color: rgb(0, 0, 0);
+}
 .membros{
     margin: auto;
     height: 900px;
-    background-color: rgb(0, 0, 0);
     position: relative;
     display: flex;
     flex-wrap: wrap;
