--- a/NOBOPROJETO/Servidorstyle.css
+++ b/NOBOPROJETO/Servidorstyle.css
@@ -16,6 +16,10 @@
     margin: 0px;
     padding: 0px;
 }
+::-webkit-scrollbar{
+    width: 0px;
+    height: 0px;
+}
 body{
     background-color: darkgray;
     color: var(--cor3);
@@ -28,6 +32,7 @@ nav{
     background-color: var(--cor4);
     height: 200px;
     display: flex;
+    box-shadow: 0px 0px 10px 1px black;
 }
 nav >img {
     height: 150px;
@@ -113,4 +118,15 @@ main{
     padding: 50px 10%;
     font-family: var(--font2);
     font-size: 1.9em;
+}
+.hidden{
+    opacity: 0;
+    filter: blur(5px);
+    transition: All 1s;
+    transform: translateX(-100%);
+}
+.show{
+    opacity: 1;
+    filter: blur(0px);
+    transform: translatex(0);
 }
